kafka-integration-test: added basic e2e test for kafka consumption and production